tests/js/valid/list/append.buri
@export
zeroThroughFour = [0, 1, 2, 3, 4]

@export
zeroThroughFive = zeroThroughFour:append(5)
