tests/js/invalid/list/size-0.buri
size = [0, 1, 2, 3, 4]:size("3")